non-msrv-tests/tests/ui/item_option_syntax.stderr
error: expected parentheses: #[derive_where(...)]
 --> tests/ui/item_option_syntax.rs:7:16
  |
7 | #[derive_where = invalid]
  |                ^

error: unexpected option syntax
  --> tests/ui/item_option_syntax.rs:11:3
   |
11 | #[derive_where = "invalid"]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error: empty `derive_where` found
  --> tests/ui/item_option_syntax.rs:15:3
   |
15 | #[derive_where()]
   |   ^^^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/item_option_syntax.rs:19:16
   |
19 | #[derive_where(Debug = "option"; T)]
   |                ^^^^^^^^^^^^^^^^

error: empty attribute option found
  --> tests/ui/item_option_syntax.rs:23:16
   |
23 | #[derive_where(Debug(); T)]
   |                ^^^^^^^

error: `Debug` doesn't support any options
  --> tests/ui/item_option_syntax.rs:27:16
   |
27 | #[derive_where(Debug(option); T)]
   |                ^^^^^^^^^^^^^

error: unexpected token: `invalid`
 --> tests/ui/item_option_syntax.rs:7:18
  |
7 | #[derive_where = invalid]
  |                  ^^^^^^^
